...
    );
  }

  @override
  Widget build(BuildContext context) {
    final String appBarTitle = switch ((widget.type, isEdit)) {
      (.expense, false) => 'Catat Pengeluaran',
      (.expense, true) => 'Perbarui Catatan Pengeluaran',
      (.income, false) => 'Catat Pemasukan',
      (.income, true) => 'Perbarui Catatan Pemasukan',
    };

    return ReactiveForm(
...
                        TextButton(
                          onPressed: () {
                            providedContext.router.replace(
                              TransactionRoute(type: widget.type, batch: true),
                            );
                          },
                          child: Text('Catat banyak kategori sekaligus'),
                        ),

                      if (widget.batch)
                        TextButton(
                          onPressed: () {
                            providedContext.router.replace(
                              TransactionRoute(type: widget.type),
                            );
                          },
                          child: Text('Catat satu kategori'),
                        ),
                    ],
                  ),
                );
              },
            ),
...
                      ),
                      OutlinedButton.icon(
                        onPressed: () {
                          _form.addCategory();
                        },
                        icon: Icon(Icons.add_rounded),
                        label: Text('Tambah Kategori'),
                      ),
                    ],
                  ),

                if (!widget.batch)
                  CategoryField(
...
