...
                children: [
                  Row(
                    spacing: 8,
                    children: [
                      Icon(Icons.money_rounded),
                      Text(
                        'Total Uang',
                        style: themeData.textTheme.titleMedium,
                      ),
                      Spacer(),
                      Icon(
                        _isObscure
                            ? Icons.visibility_off_rounded
                            : Icons.visibility_rounded,
                      ),
                    ],
                  ),
                  Text(
                    _isObscure ? 'Rp••••••••••' : state.balance.currency,
                    style: themeData.textTheme.displaySmall?.copyWith(
                      fontWeight: FontWeight.w700,
                      color: themeData.colorScheme.primary,
                    ),
                  ),
                  _BalanceSubtitle(isObscure: _isObscure),
...
