import 'package:dompet_app/core/enums/account_type.dart';
import 'package:dompet_app/core/enums/balance_type.dart';
import 'package:flutter/material.dart';

enum AccountPreset {
  // --- ASSET (101) ---
  cash('Tunai', .asset, '101.0001', Icons.payments_rounded),
  bank('Rekening Bank', .asset, '101.0002', Icons.account_balance_rounded),
  eWallet('E-Wallet', .asset, '101.0003', Icons.phone_android_rounded),
  receivable('Piutang', .asset, '101.0004', Icons.call_received_rounded),
  investment('Investasi', .asset, '101.0005', Icons.trending_up_rounded),
  savingPocket('Kantong Tabungan', .asset, '101.0006', Icons.savings_rounded),

  // --- LIABILITY (201) ---
...
